--- a/style.css
+++ b/style.css
@@ -1,41 +1,14 @@
 body{
-    background-color: lightgray;
-    color: darkred;
-    font-family: 'Courier New';
+    background-color: black;   
     text-align: center;
-    padding-top: 50px;
-    padding-bottom: 50px;
-    list-style-position: inside;
+}
+div#welcomeText{
+    
+    display: inline-block;
+    text-align: center;
+    color: black;
+    background-color: white;
+    border-style: double;
 }
 
-p{
-    padding-left: 500px;
-    padding-right: 500px;
-}
-.welcome{
-    font-size: larger;
-    font-style: italic;
-}
-#carousel {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    max-height: 300px;
-    overflow: hidden;
-    gap: 10px;
-}
 
-#carousel img {
-    max-height: 300px;
-    aspect-ratio: auto 300 / 400;
-    border-radius: 10px;
-}
-
-#buttons {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin-top: 10px;
-}
